BUGFIX: SidebarLayoutBlock should look somewhat better on mobile and desktop now

--- a/jetstream/static/jetstream/css/blocks/captioned-image.less
+++ b/jetstream/static/jetstream/css/blocks/captioned-image.less
@@ -17,8 +17,7 @@
 @media (min-device-width: @screen-phone) 
         and (max-device-width: @screen-tablet) {
   .captioned-image {
-    .image-caption,
-    .image-credit {
+    .image-details {
       padding-left: 10px;
       padding-right: 10px;
     }
@@ -28,8 +27,7 @@
 @media (max-width: @small_viewport) {
   .captioned-image {
     margin-bottom: 2em;
-    .image-caption,
-    .image-credit {
+    .image-details {
       padding-left: 10px;
       padding-right: 10px;
     }
