--- a/jetstream/static/jetstream/css/blocks/column-sidebar.less
+++ b/jetstream/static/jetstream/css/blocks/column-sidebar.less
@@ -37,15 +37,3 @@
     width: 100%;
   }
 }
-
-@media (min-width: @medium_viewport) {
-  .sidebar-layout {
-    padding: 0;
-
-    & > .rich-text {
-      padding: 0;
-      margin-bottom: 2em;
-      width: 100%;
-    }
-  }
-}
