--- a/jetstream/static/jetstream/css/blocks/fancy-rich-text.less
+++ b/jetstream/static/jetstream/css/blocks/fancy-rich-text.less
@@ -57,11 +57,3 @@
   }
 }
 
-@media (min-width: @medium_viewport) {
-  .fancy-rich-text > .rich-text {
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-bottom: 2em;
-    width: 100%;
-  }
-}
